chore: main Сделана пересборка для публикации

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "turmag-vue-components",
     "description": "The library of the components",
     "type": "module",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "private": false,
     "author": {
         "name": "Pavel Vinogradov",
@@ -19,9 +19,9 @@
     ],
     "exports": {
         ".": {
-            "import": "./dist/turmag-vue-components.es.js",
+            "types": "./dist/index.d.ts",
             "require": "./dist/turmag-vue-components.umd.js",
-            "types": "./dist/index.d.ts"
+            "import": "./dist/turmag-vue-components.es.js"
         }
     },
     "peerDependencies": { "vue": "^3.5.1" },
