--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "bugs": { "url": "https://github.com/Turmag/turmag-vue-components/issues" },
     "scripts": {
         "build": "vite build",
-        "generate-components-idx": "node .\\/node-files\\/generateComponentsIndex.js"
+        "generate-components-idx": "node .\\/node-files\\/generateComponentsIndex.js",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "devDependencies": {
         "@types/node": "^24.3.1",
@@ -53,7 +55,19 @@
         "vite-plugin-css-injected-by-js": "^3.1.1",
         "vite-plugin-dts": "^3.6.4",
         "vue": "^3.5.27",
-        "vue-tsc": "^1.8.27"
+        "vue-tsc": "^1.8.27",
+        "storybook": "^10.2.7",
+        "@storybook/vue3-vite": "^10.2.7",
+        "@chromatic-com/storybook": "^5.0.0",
+        "@storybook/addon-vitest": "^10.2.7",
+        "@storybook/addon-a11y": "^10.2.7",
+        "@storybook/addon-docs": "^10.2.7",
+        "@storybook/addon-onboarding": "^10.2.7",
+        "eslint-plugin-storybook": "^10.2.7",
+        "vitest": "^4.0.18",
+        "playwright": "^1.58.2",
+        "@vitest/browser-playwright": "^4.0.18",
+        "@vitest/coverage-v8": "^4.0.18"
     },
     "dependencies": { "vue-tippy": "^6.7.1" }
 }
